--- a/WebApp9Soft/Views/Home/Index.cshtml
+++ b/WebApp9Soft/Views/Home/Index.cshtml
@@ -18,8 +18,8 @@
                             <p class="text-white">Highly Tailored IT Design, Management & Support Services.</p>
 
                             <div class="hero-button-group section-space--mt_50">
-                                <a href="#" class="ht-btn ht-btn-md">Free consultation</a>
-                                <a href="#" class="ht-btn ht-btn-md btn--white"><span class="btn-icon mr-2"><i class="fa fa-play"></i></span> How we work</a>
+                                <a href="@Url.Action("Contact","Home")" class="ht-btn ht-btn-md">Free consultation</a>
+                                <a href="@Url.Action("About","Home")" class="ht-btn ht-btn-md btn--white"><span class="btn-icon mr-2"><i class="fa fa-play"></i></span> How we work</a>
                             </div>
                         </div>
                     </div>
@@ -48,10 +48,10 @@
                                     <div class="image-box-wrap">
                                         <div class="box-image">
                                             <div class="default-image">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-01-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/vectors/web development.png" alt="" style="height:108px;">
                                             </div>
                                             <div class="hover-images">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-01-hover-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/attachments/web development white.png" alt="" style="height:108px;">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -78,10 +78,10 @@
                                     <div class="image-box-wrap">
                                         <div class="box-image">
                                             <div class="default-image">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-02-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/vectors/Graphics.png" alt="" style="height:108px;">
                                             </div>
                                             <div class="hover-images">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-02-hover-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/attachments/Graphics white.png" alt="" style="height:108px;">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -108,10 +108,10 @@
                                     <div class="image-box-wrap">
                                         <div class="box-image">
                                             <div class="default-image">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-03-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/vectors/Digital Marketing.png" alt="" style="height:108px;">
                                             </div>
                                             <div class="hover-images">
-                                                <img class="img-fulid" src="~/assets/images/icons/mitech-home-resolutions-box-image-03-hover-100x98.png" alt="">
+                                                <img class="img-fulid" src="~/assets/images/icons/attachments/Digital Marketing white.png" alt="" style="height:108px;">
                                             </div>
                                         </div>
                                         <div class="content">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="section-under-heading text-center section-space--mt_80">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></div>
+                    <div class="section-under-heading text-center section-space--mt_80">Challenges are just opportunities in disguise. <a href="@Url.Action("Contact","Home")">Lets consult your ideas with us!</a></div>
 
                 </div>
             </div>
@@ -206,10 +206,10 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 wow move-up">
                                 <!-- ht-box-icon Start -->
-                                <div class="ht-box-icon style-01 single-svg-icon-box">
+                                <div class="ht-box-icon style-01">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-1" data-svg-icon="assets/images/svg/linea-basic-heart.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/Graphics.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Graphics Design</h5>
@@ -231,8 +231,8 @@
                                 <!-- ht-box-icon Start -->
                                 <div class="ht-box-icon style-01 single-svg-icon-box">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-2" data-svg-icon="assets/images/svg/linea-basic-case.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/SEO.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">SEO</h5>
@@ -254,8 +254,8 @@
                                 <!-- ht-box-icon Start -->
                                 <div class="ht-box-icon style-01 single-svg-icon-box">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-3" data-svg-icon="assets/images/svg/linea-basic-alarm.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/social media management.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Social Media Management</h5>
@@ -277,8 +277,8 @@
                                 <!-- ht-box-icon Start -->
                                 <div class="ht-box-icon style-01 single-svg-icon-box">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-4" data-svg-icon="assets/images/svg/linea-basic-geolocalize-05.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/e commerce.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">E-Commerce Platform</h5>
@@ -300,11 +300,11 @@
                                 <!-- ht-box-icon Start -->
                                 <div class="ht-box-icon style-01 single-svg-icon-box">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-5" data-svg-icon="assets/images/svg/linea-ecommerce-money.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/web development.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
-                                            <h5 class="heading">Web Development</h5>
+                                            <h5 class="heading">Web Design & Development</h5>
                                             <div class="text">
                                                 Even a best design in universe won’t help you if no one can find you. Our full spectrum creative and innovative marketing services includes a search engines friendly websites with user-friendly content management system.
                                             </div>
@@ -323,8 +323,8 @@
                                 <!-- ht-box-icon Start -->
                                 <div class="ht-box-icon style-01 single-svg-icon-box">
                                     <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-6" data-svg-icon="assets/images/svg/linea-basic-spread-text-bookmark.svg"></div>
+                                        <div class="box-image">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/web hosting.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Web Hosting</h5>
@@ -342,58 +342,13 @@
                                 </div>
                                 <!-- ht-box-icon End -->
                             </div>
-                          @*  <div class="col-lg-4 col-md-6 wow move-up">
-                                <!-- ht-box-icon Start -->
-                                <div class="ht-box-icon style-01 single-svg-icon-box">
-                                    <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-7" data-svg-icon="assets/images/svg/linea-music-headphones.svg"></div>
-                                        </div>
-                                        <div class="content">
-                                            <h5 class="heading">Products (Point of sale)</h5>
-                                            <div class="text">
-                                                We provide the most responsive and functional IT design for companies and businesses worldwide.
-                                            </div>
-                                            <div class="feature-btn">
-                                                <a href="#">
-                                                    <span class="button-text">Discover more</span>
-                                                    <i class="far fa-long-arrow-right"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- ht-box-icon End -->
-                            </div>
-                            <div class="col-lg-4 col-md-6 wow move-up">
-                                <!-- ht-box-icon Start -->
-                                <div class="ht-box-icon style-01 single-svg-icon-box">
-                                    <div class="icon-box-wrap">
-                                        <div class="icon">
-                                            <div class="svg-icon" id="svg-icon-8" data-svg-icon="assets/images/svg/linea-basic-gear.svg"></div>
-                                        </div>
-                                        <div class="content">
-                                            <h5 class="heading">Software Engineering</h5>
-                                            <div class="text">
-                                                We provide the most responsive and functional IT design for companies and businesses worldwide.
-                                            </div>
-                                            <div class="feature-btn">
-                                                <a href="#">
-                                                    <span class="button-text">Discover more</span>
-                                                    <i class="far fa-long-arrow-right"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>*@
-                                <!-- ht-box-icon End -->
+                         
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     <!--===========  feature-icon-wrapper  End =============-->
     <!--====================  Conact us Section Start ====================-->
     <div class="contact-us-section-wrappaer processing-contact-us-bg section-space--ptb_120">
@@ -403,7 +358,7 @@
                     <div class="conact-us-wrap-one">
                         <h3 class="heading text-white">Obtaining further information by make a contact with our experienced IT staffs. </h3>
 
-                        <div class="sub-heading text-white">We’re available for 8 hours a day!<br>Contact to require a detailed analysis and assessment of your plan.</div>
+                        <div class="sub-heading text-white">We’re available for 7 / 24 a day!<br>Contact to require a detailed analysis and assessment of your plan.</div>
 
                     </div>
                 </div>
@@ -414,7 +369,7 @@
                             <span class="fal fa-phone"></span>
                         </div>
                         <h6 class="heading font-weight--reguler">Reach out now!</h6>
-                        <h2 class="call-us"><a href="tel:190068668">1900 68668</a></h2>
+                        <h2 class="call-us"><a href="tel:190068668">021 34527965</a></h2>
                         <div class="contact-us-button mt-20">
                             <a href="#" class="btn btn--secondary">Contact us</a>
                         </div>
@@ -654,8 +609,8 @@
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="cta-button-group--one text-center">
-                        <a href="#" class="btn btn--white btn-one"><span class="btn-icon mr-2"><i class="far fa-comment-alt-dots"></i></span> Let's talk</a>
-                        <a href="#" class="btn btn--secondary  btn-two"><span class="btn-icon mr-2"><i class="far fa-info-circle"></i></span> Get info</a>
+                        <a href="@Url.Action("Contact","Home")" class="btn btn--white btn-one"><span class="btn-icon mr-2"><i class="far fa-comment-alt-dots"></i></span> Let's talk</a>
+                        <a href="@Url.Action("About","Home")" class="btn btn--secondary  btn-two"><span class="btn-icon mr-2"><i class="far fa-info-circle"></i></span> Get info</a>
                     </div>
                 </div>
             </div>
@@ -771,4 +726,3 @@
     <!--====================  End of brand logo slider area  ====================-->
 
 </div>
-
