--- a/WebApp9Soft/Views/Services/Index.cshtml
+++ b/WebApp9Soft/Views/Services/Index.cshtml
@@ -55,7 +55,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-01-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/Graphics.png" alt=""  style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Graphics Design</h5>
@@ -80,7 +80,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-02-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/SEO.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">SEO</h5>
@@ -105,7 +105,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-03-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/social media management.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Social Media Management</h5>
@@ -130,7 +130,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-04-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/e commerce.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">E-Commerce Platform</h5>
@@ -155,10 +155,10 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-05-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/web development.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
-                                            <h5 class="heading">Web Development</h5>
+                                            <h5 class="heading">Web Design & Development</h5>
                                             <div class="text">
                                                 Even a best design in universe won’t help you if no one can find you. Our full spectrum creative and innovative marketing services includes a search engines friendly websites with user-friendly content management system.
                                             </div>
@@ -180,7 +180,7 @@
                                 <div class="ht-box-images style-01">
                                     <div class="image-box-wrap">
                                         <div class="box-image">
-                                            <img class="img-fulid" src="~/assets/images/icons/mitech-box-image-style-01-image-06-100x108.png" alt="">
+                                            <img class="img-fulid wow pulse" src="~/assets/images/icons/vectors/web hosting.png" alt="" style="height:108px;">
                                         </div>
                                         <div class="content">
                                             <h5 class="heading">Web Hosting</h5>
@@ -203,73 +203,30 @@
                         </div>
                     </div>
 
-                    <div class="section-under-heading text-center section-space--mt_80">Challenges are just opportunities in disguise. <a href="#">Take the challenge!</a></div>
-
                 </div>
             </div>
         </div>
     </div>
     <!--===========  feature-images-wrapper  End =============-->
-    <!--============ Contact Us Area Start =================-->
-    <div class="contact-us-area infotechno-contact-us-bg section-space--pt_100">
+    <!--========== Call to Action Area Start ============-->
+    <div class="cta-image-area_one section-space--ptb_80 cta-bg-image_one">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-7">
-                    <div class="image">
-                        <img class="img-fluid" src="~/assets/images/banners/home-cybersecurity-contact-bg-image.png" alt="">
+                <div class="col-xl-8 col-lg-7">
+                    <div class="cta-content md-text-center">
+                        <h3 class="heading text-white">We run all kinds of IT services that vow your <span class="text-color-secondary"> success</span></h3>
                     </div>
                 </div>
-
-                <div class="col-lg-4 ml-auto">
-                    <div class="contact-info style-two text-left">
-
-                        <div class="contact-info-title-wrap text-center">
-                            <h3 class="heading  mb-10">4.9/5.0</h3>
-                            <div class="ht-star-rating lg-style">
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </div>
-                            <p class="sub-text">by 700+ customers for 3200+ clients</p>
-                        </div>
-
-                        <div class="contact-list-item">
-                            <a href="tel:190068668" class="single-contact-list">
-                                <div class="content-wrap">
-                                    <div class="content">
-                                        <div class="icon">
-                                            <span class="fal fa-phone"></span>
-                                        </div>
-                                        <div class="main-content">
-                                            <h6 class="heading">Call for advice now!</h6>
-                                            <div class="text">1900 68668</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                            <a href="mailto:hello@9SoftSolutions.com" class="single-contact-list">
-                                <div class="content-wrap">
-                                    <div class="content">
-                                        <div class="icon">
-                                            <span class="fal fa-envelope"></span>
-                                        </div>
-                                        <div class="main-content">
-                                            <h6 class="heading">Say hello</h6>
-                                            <div class="text">hello@9SoftSolutions.com</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-
+                <div class="col-xl-4 col-lg-5">
+                    <div class="cta-button-group--one text-center">
+                        <a href="@Url.Action("Contact","Home")" class="btn btn--white btn-one"><span class="btn-icon mr-2"><i class="far fa-comment-alt-dots"></i></span> Let's talk</a>
+                        <a href="@Url.Action("About","Home")" class="btn btn--secondary  btn-two"><span class="btn-icon mr-2"><i class="far fa-info-circle"></i></span> Get info</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--============ Contact Us Area End =================-->
+    <!--========== Call to Action Area End ============-->
 
 </div>
 
