--- a/WebApp9Soft/Views/Services/SEODetail.cshtml
+++ b/WebApp9Soft/Views/Services/SEODetail.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="site-wrapper-reveal">
-        <div class="about-banner-wrap banner-space bg-img" style="background:url(../../assets/images/bg/managed-it-services-hero-bg.jpg)">
+        <div class="about-banner-wrap banner-space bg-img" style="background-image:url(assets/images/bg/business-solution-hero-bg.jpg)">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 ml-auto mr-auto">
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="modern-number-01">
-                                <h3 class="heading mt-30">Learn More About Our <span class="text-color-primary"> Web Development <br> Services.</span></h3>
+                                <h3 class="heading mt-30">Learn More About Our <span class="text-color-primary"> Search Engine Optimization <br> Services.</span></h3>
                             </div>
                         </div>
                         <div class="col-lg-7 offset-lg-1">
