--- a/WebApp9Soft/Views/Services/ECommerceDetail.cshtml
+++ b/WebApp9Soft/Views/Services/ECommerceDetail.cshtml
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-lg-8 ml-auto mr-auto">
                         <div class="about-banner-content text-center">
-                            <h1 class="mb-15 text-white">Web Development</h1>
+                            <h1 class="mb-15 text-white">E-Commerce Platform</h1>
                             <h5 class="font-weight--normal text-white">Reach out to the world’s most reliable IT services.</h5>
                         </div>
                     </div>
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="modern-number-01">
-                                <h3 class="heading mt-30">Learn More About Our <span class="text-color-primary"> Web Development <br> Services.</span></h3>
+                                <h3 class="heading mt-30">Learn More About Our <span class="text-color-primary"> E-Commerce Platform <br> Services.</span></h3>
                             </div>
                         </div>
                         <div class="col-lg-7 offset-lg-1">
