--- a/WebApp9Soft/Views/Services/SocialMediaDetail.cshtml
+++ b/WebApp9Soft/Views/Services/SocialMediaDetail.cshtml
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-lg-8 ml-auto mr-auto">
                         <div class="about-banner-content text-center">
-                            <h1 class="mb-15 text-white">Web Development</h1>
+                            <h1 class="mb-15 text-white">Social Media Management</h1>
                             <h5 class="font-weight--normal text-white">Reach out to the world’s most reliable IT services.</h5>
                         </div>
                     </div>
